# RedTeamOps-Havoc-101

./: README.md  slack.yaotl
Bloater/: Bloater.sln
Bloater/Bloater/: Bloater.csproj  CommandLineArgumentParser.cs  Program.cs  Win32.cs  packages.config
Bloater/Bloater/DInvoke.Data/: PE.cs  Win32.cs
Bloater/Bloater/DInvoke.DynamicInvoke/: Utilities.cs
Bloater/Bloater/DInvoke.ManualMap/: Map.cs
Bloater/Bloater/Properties/: AssemblyInfo.cs
Clicker/: Clicker.sln
Clicker/Clicker/: Clicker.csproj  CommandLineArgumentParser.cs  Program.cs  Win32.cs
Clicker/Clicker/DInvoke.Data/: Native.cs
Clicker/Clicker/DInvoke.DynamicInvoke/: Generic.cs  Native.cs
Clicker/Clicker/Properties/: AssemblyInfo.cs
RatKing/: Cargo.toml  RatKing.sln
RatKing/RatKing/: CommandLineArgumentParser.cs  Program.cs  RatKing.csproj  Win32.cs
RatKing/RatKing/DInvoke.ManualMap/: Overload.cs
RatKing/RatKing/Properties/: AssemblyInfo.cs
RatKing/bindings/: build.rs
RatKing/data/: Cargo.toml
RatKing/dinvoke/: Cargo.toml
RatKing/manualmap/src/: lib.rs
RatKing/overload/: Cargo.toml
RatKing/overload/src/: lib.rs
RatKing/src/: main.rs
Runner/: Runner.sln
Runner/Runner/: CommandLineArgumentParser.cs  Program.cs  Runner.csproj  Win32.cs
Runner/Runner/DInvoke.Data/: Win32.cs
Runner/Runner/DInvoke.DynamicInvoke/: Generic.cs  Native.cs  Utilities.cs
Runner/Runner/Properties/: AssemblyInfo.cs
RustKing/: Cargo.toml
RustKing/bindings/: Cargo.toml
RustKing/data/src/: lib.rs
RustKing/dinvoke/src/: lib.rs
RustKing/dmanager/: Cargo.toml
RustKing/dmanager/src/: lib.rs
RustKing/manualmap/: Cargo.toml
RustKing/src/: main.rs
ServiceExec/: ServiceExec.sln
ServiceExec/ServiceExec/: Program.cs  ProjectInstaller.Designer.cs  ProjectInstaller.cs  ProjectInstaller.resx  Service1.Designer.cs  Service1.cs  ServiceExec.csproj  Win32.cs
ServiceExec/ServiceExec/DInvoke.DynamicInvoke/: Generic.cs  Native.cs  Win32.cs
Stalker/: Stalker.sln
Stalker/Stalker/: CommandLineArgumentParser.cs  Program.cs  Stalker.csproj  Win32.cs
SylantStrike/: SylantStrike.sln
SylantStrike/SylantStrike/: SylantStrike.cpp  SylantStrike.h  SylantStrike.vcxproj  SylantStrike.vcxproj.filters  cpp.hint  dllmain.cpp
SylantStrike/SylantStrikeInject/: BasicInject.cs  Options.cs  Program.cs  SylantStrikeInject.csproj
assets/: Redirector.MD  Stager.MD
(+27 files in other folders)
