[package]
name = "RustKing"
version = "0.1.0"
edition = "2018"

[profile.dev.package.dinvoke_rs]
opt-level = 3
debug = 0

[dependencies]
dinvoke = { path = "dinvoke" }
manualmap = { path = "manualmap" }
bindings = { path = "bindings" }
data = { path = "data" }
overload = { path = "overload" }
dmanager = { path = "dmanager" }
random-string = "1.0.0"
reqwest = { version = "0.11", features = ["json"] }
ureq = "2.4.0"
anyhow = "1.0.56"
libaes = "0.6"
itertools = "0.10"
sysinfo = "0.23.11"
litcrypt = "0.3"
clap = { version = "4.1.6", features = ["derive"] }

[dependencies.windows]
version = "0.37"
features = [
    "Win32_UI_Input_Pointer",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_UI_Input_Pointer",
]
