[package]
name = "overload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.overload]
opt-level = 3
debug = 0

[dependencies]
bindings = { path = "../bindings" }
dinvoke = { path = "../dinvoke" }
data = { path = "../data" }
manualmap = { path = "../manualmap" }
litcrypt = "0.3"
winproc = "0.6.4"
rand = "0.8.4"
