[package]
name = "dmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
manualmap = { path = "../manualmap" }
data = { path = "../data" }
litcrypt = "0.3"
bindings = { path = "../bindings" }
dinvoke = { path = "../dinvoke" }
